--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name="com.mvvm_clean.currency_exchange.AboutCanadaApplication"
+        android:name="com.mvvm_clean.currency_exchange.CurrencyRateCalculatorApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -17,7 +17,7 @@
 
         <!--Activities-->
         <activity
-            android:name="com.mvvm_clean.currency_exchange.core.presentation.navigation.CurrencyExchangeNavigatorActivity"
+            android:name=".core.presentation.navigation.CurrencyExchangeNavigatorActivity"
             android:noHistory="true"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.Translucent">
@@ -28,9 +28,9 @@
         </activity>
 
         <activity
-            android:name="com.mvvm_clean.currency_exchange.features.currency_rate_calculate_screen.presentation.ui.activities.CanadaFactListActivity"
-            android:label="@string/canada_fact_screen_title"
-            android:screenOrientation="portrait"></activity>
+            android:name=".features.currency_rate_calculate_screen.presentation.ui.activities.CurrencyRateListActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"/>
 
     </application>
 
